# learning_rust-lang

./: README.md  readme.md
guessing_game/: Cargo.toml
opensearch/: Cargo.toml
opensearch/Archive/: backup_main.rs  query_test.rs  short_main.rs  working_main.rs
opensearch/Archive/output_to_terminal/: main_working_backup.rs
opensearch/src/: main.rs  main_backup.rs  query.json  query.rs
opensearch/src/structs/: opensearch.rs
