[package]
name = "opensearch"
version = "0.1.0"
authors = ["rolfmadsen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.125"
serde_with = "1.8.0"
json = "0.12.4"
serde_path_to_error = "0.1.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5", features = ["full"] }
futures = "0.3.15"
url = "2.2.2"
unicode-normalization = "0.1.18"