[package]
name = "opensearch"
version = "0.1.0"
authors = ["rolfmadsen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_derive = "^1.0.137"
openssl = { version = "0.10.40", features = ["vendored"] }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.19.0", features = ["full"] }